# lskat

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  configure  configure.in  libtool  lskat.categories  lskat.desktop  lskat.kdelnk  lskat.kdevprj  lskat.lsm  lskatui.rc  org.kde.lskat.appdata.xml  org.kde.lskat.desktop  snapcraft.yaml
doc/: CMakeLists.txt  index.docbook  index.html
grafix/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  blue.desktop  blue.rc  default.desktop  default.rc  egyptian.desktop  egyptian.rc  index.desktop  oxygen.desktop  oxygen.rc
icons/: CMakeLists.txt
lskat/: KChildConnect.cpp  KChildConnect.h  KConnectEntry.h  KConnectTypes.h  KEInput.cpp  KEInput.h  KEMessage.cpp  KInputChildProcess.cpp  KInteractiveConnect.cpp  KInteractiveConnect.h  KMessageEntry.cpp  KMessageEntry.h  KProcessConnect.cpp  KProcessConnect.h  KRSocket.cpp  KRSocket.h  KRemoteConnect.cpp  KRemoteConnect.h  Makefile  Makefile.am  Makefile.in  aboutdlg.cpp  aboutdlg.h  aboutdlgdata.cpp  large-lskat.xpm  lskat.cpp  lskat.desktop  lskat.h  lskat.xpm  lskatdoc.cpp  lskatdoc.h  lskatui.rc  lskatview.cpp  lskatview.h  main.cpp  mini-lskat.xpm  movielabel.cpp  movielabel.h  msgdlg.cpp  msgdlg.h  (+6 more)
lskat/api/: KChildConnect.html  KChildConnect_h.html  KConnectEntry.html  KConnectEntry_h.html  KConnectTypes_h.html  KEInput.html  KEInput_h.html  KEMessage.html  KEMessage_h.html  KInputChildProcess.html  KInputChildProcess_h.html  KInteractiveConnect.html  KInteractiveConnect_h.html  KMessageEntry.html  KMessageEntry_h.html  KProcessConnect.html  KProcessConnect_h.html  KRServerSocket.html  KRSocket_h.html  KRemoteConnect.html  KRemoteConnect_h.html  LSkatApp.html  LSkatDoc.html  LSkatView.html  NameDlg.html  NetworkDlg.html  UConnect.html  all-globals.html  full-list-KChildConnect.html  full-list-KConnectEntry.html  full-list-KEInput.html  full-list-KEMessage.html  full-list-KInputChildProcess.html  full-list-KInteractiveConnect.html  full-list-KMessageEntry.html  full-list-KProcessConnect.html  full-list-KRServerSocket.html  full-list-KRemoteConnect.html  full-list-LSkatApp.html  full-list-LSkatDoc.html  (+14 more)
lskatproc/: KChildConnect.cpp  KChildConnect.h  KConnectTypes.h  KEMessage.cpp  KEMessage.h  KInputChildProcess.cpp  KInputChildProcess.h  KMessageEntry.cpp  KMessageEntry.h  Makefile.am  Makefile.in  lskatproc.cpp  lskatproc.h  main.cpp
po/: Makefile  Makefile.in  lskat.pot
po/af/: lskat.po
po/ar/: lskat.po
po/ast/: lskat.po
po/be/: lskat.po
po/bg/: lskat.po
po/br/: lskat.po
po/bs/: lskat.po
po/ca/: lskat.po
po/ca/docs/lskat/: index.docbook
po/ca@valencia/: lskat.po
po/cs/: lskat.po
po/cs/docs/lskat/: index.docbook
po/cy/: lskat.po
po/da/: lskat.po
po/de/: lskat.po
po/de/docs/lskat/: index.docbook
po/el/: lskat.po
po/en_GB/: lskat.po
po/eo/: lskat.po
po/es/: lskat.po
po/es/docs/lskat/: index.docbook
po/et/: lskat.po
po/et/docs/lskat/: index.docbook
po/eu/: lskat.po
po/fa/: lskat.po
po/fi/: lskat.po
po/fr/: lskat.po
po/fr/docs/lskat/: index.docbook
po/ga/: lskat.po
po/gl/: lskat.po
po/he/: lskat.po
po/hi/: lskat.po
po/hne/: lskat.po
po/hr/: lskat.po
po/hu/: lskat.po
po/id/: lskat.po
po/is/: lskat.po
po/it/: lskat.po
po/it/docs/lskat/: index.docbook
po/ja/: lskat.po
po/ka/: lskat.po
po/kk/: lskat.po
po/km/: lskat.po
po/ko/: lskat.po
po/lt/: lskat.po
po/lv/: lskat.po
po/mai/: lskat.po
po/mk/: lskat.po
po/ml/: lskat.po
po/mr/: lskat.po
po/ms/: lskat.po
po/nb/: lskat.po
po/nds/: lskat.po
po/ne/: lskat.po
po/nl/: lskat.po
po/nl/docs/lskat/: index.docbook
po/nn/: lskat.po
po/oc/: lskat.po
po/pa/: lskat.po
po/pl/: lskat.po
po/pt/: lskat.po
po/pt/docs/lskat/: index.docbook
po/pt_BR/: lskat.po
po/pt_BR/docs/lskat/: index.docbook
po/ro/: lskat.po
po/ru/: lskat.po
po/ru/docs/lskat/: index.docbook
po/sa/: lskat.po
po/se/: lskat.po
po/sk/: lskat.po
po/sl/: lskat.po
po/sl/docs/lskat/: index.docbook
po/sq/: lskat.po
po/sr/: lskat.po
po/sr@ijekavian/: lskat.po
po/sr@ijekavianlatin/: lskat.po
po/sr@latin/: lskat.po
po/sv/: lskat.po
po/sv/docs/lskat/: index.docbook
po/ta/: lskat.po
po/tg/: lskat.po
po/tr/: lskat.po
po/ug/: lskat.po
po/uk/: lskat.po
po/uk/docs/lskat/: index.docbook
po/xh/: lskat.po
po/zh_CN/: lskat.po
po/zh_TW/: lskat.po
src/: CMakeLists.txt  Makefile.am  Messages.sh  abstractdisplay.cpp  abstractdisplay.h  abstractengine.cpp  abstractengine.h  abstractinput.cpp  abstractinput.h  aiinput.cpp  aiinput.h  canvasview.cpp  canvasview.h  cardsprite.cpp  cardsprite.h  config-src.h.cmake  config_two.cpp  config_two.h  deck.cpp  deck.h  display_intro.cpp  display_intro.h  display_two.cpp  display_two.h  engine_two.cpp  engine_two.h  gameview.cpp  gameview.h  lskat.qrc  lskat_debug.cpp  lskat_debug.h  lskatclasses.fig  lskatglobal.h  lskatui.rc  main.cpp  mainwindow.cpp  mainwindow.h  mouseinput.cpp  mouseinput.h  namedialog.ui  (+17 more)
src/fromlibkdegames/: README  cardcache.cpp  cardcache.h  cardcache_p.h  carddeckinfo.cpp  carddeckinfo.h  carddeckinfo_p.h  kcarddialog.cpp  kcarddialog.h
themes/: CMakeLists.txt  blue.desktop  blue.rc  egyptian.desktop  oxygen.desktop  oxygen.rc
