
SUBDIRS = lskat grafix lskatproc

####### kdevelop will overwrite this part!!! (end)############
# not a GNU package. You can remove this line, if 
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 

KDE_ICON = lskat

xdg_apps_DATA = lskat.desktop
EXTRA_DIST = $(xdg_apps_DATA)
