# Generated automatically from Makefile.in by configure.
# KDE tags expanded automatically by am_edit - $Revision$ 
# Generated automatically from Makefile.in by configure.
DISTFILES= 1.bmp 10.bmp 11.bmp 12.bmp 13.bmp 14.bmp 15.bmp 16.bmp \
17.bmp 18.bmp 19.bmp 2.bmp 20.bmp 21.bmp 22.bmp 23.bmp 24.bmp \
25.bmp 26.bmp 27.bmp 28.bmp 29.bmp 3.bmp 30.bmp 31.bmp 32.bmp \
4.bmp \
400000.bmp 400001.bmp 400002.bmp 400003.bmp 400004.bmp 400005.bmp \
400006.bmp 400007.bmp 400008.bmp 400009.bmp 400010.bmp 400011.bmp \
400012.bmp 400013.bmp 400014.bmp 400015.bmp 400016.bmp 400017.bmp \
400018.bmp 400019.bmp 400020.bmp 400021.bmp 400022.bmp 400023.bmp \
400024.bmp \
5.bmp 6.bmp 7.bmp 8.bmp 9.bmp background.bmp \
deck1.bmp deck2.bmp deck3.bmp deck4.bmp \
t1.bmp t2.bmp t3.bmp \
t4.bmp t5.bmp tback.bmp type1.bmp type2.bmp type3.bmp 

EXTRA_DIST =lskatpic.taz  

