grafix_DATA = 1.png 10.png 11.png 12.png 13.png 14.png 15.png 16.png \
17.png 18.png 19.png 2.png 20.png 21.png 22.png 23.png 24.png \
25.png 26.png 27.png 28.png 29.png 3.png 30.png 31.png 32.png \
4.png \
400000.png 400001.png 400002.png 400003.png 400004.png 400005.png \
400006.png 400007.png 400008.png 400009.png 400010.png 400011.png \
400012.png 400013.png 400014.png 400015.png 400016.png 400017.png \
400018.png 400019.png 400020.png 400021.png 400022.png 400023.png \
400024.png \
5.png 6.png 7.png 8.png 9.png background.png \
deck1.png deck2.png deck3.png deck4.png \
t1.png t2.png t3.png \
t4.png t5.png tback.png type1.png type2.png type3.png 

grafixdir = $(kde_datadir)/lskat/grafix

EXTRA_DIST = $(grafix_DATA)

